--- a/scss/main.css
+++ b/scss/main.css
@@ -1,7 +1,7 @@
 /* colors */
 /* colors */
 .header {
-  background-color: #000000;
+  background-color: #18ffff;
   color: #fff;
   height: 95vh;
   display: -webkit-box;
