--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -5,3 +5,6 @@ $accent-color-light: #18ffff;
 $accent-color-medium: #1de9b6;
 $secondary-color-dark: #3c1afa;
 $tertiary-color-extras: #e0e0e0;
+
+/*font*/
+$font: "Rajdhani", sans-serif;
