--- a/scss/main.css
+++ b/scss/main.css
@@ -1,5 +1,7 @@
 /* colors */
+/*font*/
 /* colors */
+/*font*/
 .header {
   background-color: #000000;
   color: #fff;
@@ -32,5 +34,10 @@ body,
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   font-size: 62.5%;
+}
+
+html {
+  font-family: "Rajdhani", sans-serif;
+  min-height: 100%;
 }
 /*# sourceMappingURL=main.css.map */
