--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -7,6 +7,8 @@
   height: 95vh;
   @include flex-col-center;
   justify-content: center;
+}
+.header-title {
   font-size: 8rem;
   text-align: center;
 }
