--- a/scss/main.css
+++ b/scss/main.css
@@ -19,6 +19,9 @@
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+}
+
+.header-title {
   font-size: 8rem;
   text-align: center;
 }
