--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -1,14 +1,58 @@
 @import "_variables";
 @import "_mixins";
 
-.header {
-  background-color: $primary-color-dark;
-  color: $primary-color-text;
-  height: 95vh;
-  @include flex-col-center;
-  justify-content: center;
+ul {
+  list-style: none;
 }
-.header-title {
-  font-size: 8rem;
-  text-align: center;
+
+a {
+  text-decoration: none;
+  color: $primary-color-dark;
+}
+
+.nyc {
+  font-size: 4.5rem;
+}
+
+.center-in-container {
+  margin: auto 0;
+}
+
+.container {
+  max-width: 100%;
+  margin: auto;
+}
+
+.nav-menu {
+  display: flex;
+}
+
+.nav-menu li {
+  padding: 0 1.5rem;
+  font-size: 4rem;
+  font-weight: bold;
+  transition: all 0.2s ease-in-out;
+}
+
+.nav-menu a:hover {
+  transform: scale(1.3);
+}
+
+#nav-bar {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 4;
+  background-color: $primary-color-text;
+  border-bottom: $primary-color-dark 0.4rem solid;
+}
+
+#nav-bar #nav-bar-content {
+  height: 8vh;
+  display: flex;
+  justify-content: space-between;
+}
+
+#nav-bar #nav-bar-content h1 {
+  margin-left: 3rem;
 }
