--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -5,6 +5,7 @@ $accent-color-light: #18ffff;
 $accent-color-medium: #1de9b6;
 $secondary-color-dark: #3c1afa;
 $tertiary-color-extras: #e0e0e0;
+$test-color: rgb(209, 73, 180);
 
 /*font*/
 $font: "Rajdhani", sans-serif;
