--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -71,3 +71,31 @@ button {
 button:hover {
   transform: scale(1.1);
 }
+
+@media screen and (max-width: 1000px) {
+  header {
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+  }
+  .left-side {
+    width: 80%;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+  }
+  .left-side h1 {
+    text-align: center;
+  }
+  .right-side button {
+    font-size: 2.5rem;
+  }
+  .right-side {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-left: 3rem;
+    padding-right: 3rem;
+    padding-bottom: 1rem;
+  }
+}
