--- a/scss/main.css
+++ b/scss/main.css
@@ -126,6 +126,25 @@ button:hover {
 }
 
 /* MEDIA QUERY CHANGES */
+@media screen and (min-width: 1001px) and (max-width: 1400px) {
+  .left-side {
+    width: 80%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .left-side h1 {
+    text-align: center;
+    padding-top: 0.5rem;
+    padding-bottom: 0rem;
+  }
+}
+
 @media screen and (max-width: 1000px) {
   header {
     -webkit-box-orient: vertical;
