icon top padding

--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -120,6 +120,7 @@ button:hover {
   .empire {
     width: 3.5rem;
     height: 5rem;
+    padding-top: 1rem;
   }
   .empire img {
     width: 3.5rem;
