--- a/scss/_culturesec.scss
+++ b/scss/_culturesec.scss
@@ -97,6 +97,8 @@
     width: auto;
   }
   .culture-text {
-    width: 95%;
+    width: 100%;
+    padding-left: 1rem;
+    padding-right: 1rem;
   }
 }
