--- a/scss/main.css
+++ b/scss/main.css
@@ -354,7 +354,9 @@ button:hover {
     width: auto;
   }
   .culture-text {
-    width: 95%;
+    width: 100%;
+    padding-left: 1rem;
+    padding-right: 1rem;
   }
 }
 
