--- a/scss/_culturesec.scss
+++ b/scss/_culturesec.scss
@@ -96,6 +96,9 @@
     padding-top: 2rem;
     width: auto;
   }
+  .culture-image-parent {
+    margin-top: 0.5rem;
+  }
   .culture-images {
     width: 40rem;
     height: 35rem;
