--- a/scss/main.css
+++ b/scss/main.css
@@ -355,6 +355,7 @@ button:hover {
   }
   .culture-image-parent {
     margin-top: 0.5rem;
+    margin-bottom: 0.5rem;
   }
   .culture-images {
     width: 40rem;
