--- a/scss/main.css
+++ b/scss/main.css
@@ -365,10 +365,12 @@ button:hover {
     width: 100%;
     padding-left: 1rem;
     padding-right: 1rem;
+    padding-top: 1rem;
   }
   .culture-text p {
     padding-right: 2rem;
     padding-left: 2rem;
+    padding-top: 1rem;
   }
 }
 
