--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,6 +1,7 @@
 /* colors */
 $primary-color-dark: #000000;
 $primary-color-text: #fff;
+$accent-color-mix: rgb(0, 255, 221);
 $accent-color-light: #18ffff;
 $accent-color-medium: #1de9b6;
 $secondary-color-dark: #3c1afa;
