Added some images and fixed font

--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -111,10 +111,14 @@ button:hover {
   }
   .right-side button {
     font-size: 2.5rem;
+    padding-bottom: 0.5rem;
+    padding-top: 0.5rem;
+    height: 5rem;
   }
   .right-side {
     @include flex-col-center;
-    padding-bottom: 1rem;
+    padding-bottom: 2rem;
+    margin-top: 0.25rem;
   }
   .empire {
     width: 3.5rem;
