--- a/scss/_culturesec.scss
+++ b/scss/_culturesec.scss
@@ -41,7 +41,7 @@
 
 .culture-images img {
   position: absolute;
-  animation: culture-images 12s infinite;
+  animation: culture-images 28s infinite;
   opacity: 0;
   width: 100%;
   height: auto;
@@ -55,14 +55,26 @@
     opacity: 0;
   }
 }
+.culture-images img:nth-child(7) {
+  animation-delay: 24s;
+}
+.culture-images img:nth-child(6) {
+  animation-delay: 20s;
+}
+.culture-images img:nth-child(5) {
+  animation-delay: 16s;
+}
+.culture-images img:nth-child(4) {
+  animation-delay: 12s;
+}
 .culture-images img:nth-child(3) {
-  animation-delay: 0s;
+  animation-delay: 8s;
 }
 .culture-images img:nth-child(2) {
   animation-delay: 4s;
 }
 .culture-images img:nth-child(1) {
-  animation-delay: 8s;
+  animation-delay: 0s;
 }
 
 /* TEXT ON RIGHT */
@@ -114,5 +126,6 @@
     padding-right: 2rem;
     padding-left: 2rem;
     padding-top: 1rem;
+    //font-size: 1.25rem;
   }
 }
