--- a/scss/main.css
+++ b/scss/main.css
@@ -123,6 +123,13 @@ button:hover {
           transform: scale(1.075);
 }
 
+button:focus {
+  -webkit-transform: scale(1.075);
+          transform: scale(1.075);
+  color: #00ffdd;
+  font-weight: bold;
+}
+
 /* MEDIA QUERY CHANGES */
 @media screen and (min-width: 1001px) and (max-width: 1400px) {
   .left-side {
