--- a/scss/_culturesec.scss
+++ b/scss/_culturesec.scss
@@ -92,14 +92,24 @@
 }
 
 /* MEDIA QUERY CHANGES */
-@media screen and (min-width: 1001px) and (max-width: 1400px) {
+@media screen and (min-width: $desktop-max) and (max-width: 2000px) {
+  .culture-text {
+    padding-left: 10rem;
+  }
+  .culture-label {
+    font-size: 10rem;
+  }
+  .culture-text p {
+    font-size: 2.25rem;
+    padding-right: 0rem;
+  }
+}
+
+@media screen and (max-width: $small-window-max) {
   .culture-images {
     //width: 35rem;
     //height: 30rem;
   }
-}
-
-@media screen and (max-width: 1000px) {
   .culture-container {
     @include flex-col-center;
     justify-content: space-between;
