--- a/scss/main.css
+++ b/scss/main.css
@@ -1,7 +1,23 @@
 /* colors */
-/*font*/
+/* font */
+/* media query - device sizes */
 /* colors */
-/*font*/
+/* font */
+/* media query - device sizes */
+/*@mixin media-query-mobile {
+  @media screen and (max-width: 480px);
+}
+
+@mixin media-query-tablet {
+  @media screen and (min-width: 481px) and (max-width: 769px);
+}
+
+@mixin media-query-laptop {
+  @media screen and (min-width: 769px) and (max-width: 1024px);
+}
+
+@mixin media-query-desktop {
+  @media screen and (min-width: 1025px) and (max-width: 1200px);*/
 header {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -131,7 +147,7 @@ button:focus {
 }
 
 /* MEDIA QUERY CHANGES */
-@media screen and (min-width: 1001px) and (max-width: 1400px) {
+@media screen and (max-width: 1150px) {
   .left-side {
     width: 80%;
     display: -webkit-box;
@@ -152,9 +168,6 @@ button:focus {
     padding-top: 0.5rem;
     padding-bottom: 0rem;
   }
-}
-
-@media screen and (max-width: 1000px) {
   header {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -215,8 +228,37 @@ button:focus {
   }
 }
 
+/*@mixin media-query-mobile {
+  @media screen and (max-width: 480px);
+}
+
+@mixin media-query-tablet {
+  @media screen and (min-width: 481px) and (max-width: 769px);
+}
+
+@mixin media-query-laptop {
+  @media screen and (min-width: 769px) and (max-width: 1024px);
+}
+
+@mixin media-query-desktop {
+  @media screen and (min-width: 1025px) and (max-width: 1200px);*/
 /* colors */
-/*font*/
+/* font */
+/* media query - device sizes */
+/*@mixin media-query-mobile {
+  @media screen and (max-width: 480px);
+}
+
+@mixin media-query-tablet {
+  @media screen and (min-width: 481px) and (max-width: 769px);
+}
+
+@mixin media-query-laptop {
+  @media screen and (min-width: 769px) and (max-width: 1024px);
+}
+
+@mixin media-query-desktop {
+  @media screen and (min-width: 1025px) and (max-width: 1200px);*/
 .culture-container {
   padding-left: 1rem;
   display: -webkit-box;
@@ -361,7 +403,20 @@ button:focus {
 }
 
 /* MEDIA QUERY CHANGES */
-@media screen and (max-width: 1000px) {
+@media screen and (min-width: 1400px) and (max-width: 2000px) {
+  .culture-text {
+    padding-left: 10rem;
+  }
+  .culture-label {
+    font-size: 10rem;
+  }
+  .culture-text p {
+    font-size: 2.25rem;
+    padding-right: 0rem;
+  }
+}
+
+@media screen and (max-width: 1150px) {
   .culture-container {
     display: -webkit-box;
     display: -ms-flexbox;
