--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -51,7 +51,7 @@ header {
 }
 
 button {
-  font-family: $font;
+  font-family: $large-font;
   font-size: 3rem;
   padding: 0.5rem;
   text-decoration: none;
