--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -8,4 +8,5 @@ $secondary-color-dark: #3c1afa;
 $tertiary-color-extras: #e0e0e0;
 
 /*font*/
-$font: "Rajdhani", sans-serif;
+$large-font: "Rajdhani", sans-serif;
+$small-font: "Noto Sans TC", sans-serif;
