--- a/scss/_intro.scss
+++ b/scss/_intro.scss
@@ -7,3 +7,26 @@
   justify-content: center;
   height: 45vh;
 }
+#video {
+  position: relative;
+  z-index: -1;
+  width: 100%;
+  height: auto;
+}
+
+.video-and-text {
+  position: relative;
+  text-align: center;
+}
+
+.video-text {
+  position: absolute;
+  top: 20%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 1;
+  font-size: 12rem;
+  color: $primary-color-text;
+  -webkit-text-stroke-width: 0.2rem;
+  -webkit-text-stroke-color: black;
+}
