--- a/scss/main.css
+++ b/scss/main.css
@@ -17,7 +17,7 @@ header {
       -ms-flex-pack: justify;
           justify-content: space-between;
   height: auto;
-  border-bottom: #00ffdd 0.3rem solid;
+  border-bottom: #00ffdd 0.1rem solid;
 }
 
 /* EMPIRE STATE BUILDING IMAGE*/
@@ -235,6 +235,31 @@ button:focus {
   height: 45vh;
 }
 
+#video {
+  position: relative;
+  z-index: -1;
+  width: 100%;
+  height: auto;
+}
+
+.video-and-text {
+  position: relative;
+  text-align: center;
+}
+
+.video-text {
+  position: absolute;
+  top: 20%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  z-index: 1;
+  font-size: 12rem;
+  color: #fff;
+  -webkit-text-stroke-width: 0.2rem;
+  -webkit-text-stroke-color: black;
+}
+
 /* colors */
 /*font*/
 .culture-container {
@@ -251,7 +276,7 @@ button:focus {
           align-items: center;
   background-color: #000000;
   color: #fff;
-  border-top: 0.35rem white solid;
+  border-top: 0.1rem #00ffdd solid;
   width: 100%;
   height: auto;
 }
