--- a/scss/_intro.scss
+++ b/scss/_intro.scss
@@ -30,3 +30,9 @@
   -webkit-text-stroke-width: 0.2rem;
   -webkit-text-stroke-color: black;
 }
+
+@media screen and (max-width: 1000px) {
+  .video-text {
+    font-size: 8rem;
+  }
+}
