--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -5,7 +5,7 @@ $accent-color-mix: rgb(0, 255, 221);
 $accent-color-light: #18ffff;
 $accent-color-medium: #1de9b6;
 $secondary-color-dark: #3c1afa;
-$tertiary-color-extras: #e0e0e0;
+$tertiary-color-extras: #a8a8a8;
 
 /*font*/
 $large-font: "Rajdhani", sans-serif;
