--- a/scss/main.css
+++ b/scss/main.css
@@ -18,6 +18,11 @@ header {
           justify-content: space-between;
   height: auto;
   border-bottom: #00ffdd 0.1rem solid;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  background-color: #fff;
+  z-index: 1;
 }
 
 /* EMPIRE STATE BUILDING IMAGE*/
@@ -103,8 +108,12 @@ button {
   transition: all 0.4s ease;
 }
 
+.button-more {
+  color: #a8a8a8;
+}
+
 /* NAV BAR EFFECTS */
-.button::after {
+button::after {
   content: " ";
   display: block;
   width: 0;
@@ -114,7 +123,7 @@ button {
   transition: width 0.3s;
 }
 
-.button:hover::after {
+button:hover::after {
   width: 100%;
 }
 
@@ -131,7 +140,7 @@ button:focus {
 }
 
 /* MEDIA QUERY CHANGES */
-@media screen and (min-width: 1001px) and (max-width: 1400px) {
+@media screen and (min-width: 1180px) and (max-width: 1400px) {
   .left-side {
     width: 80%;
     display: -webkit-box;
@@ -154,7 +163,7 @@ button:focus {
   }
 }
 
-@media screen and (max-width: 1000px) {
+@media screen and (max-width: 1179px) {
   header {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -249,20 +258,29 @@ button:focus {
 
 .video-text {
   position: absolute;
-  top: 20%;
+  top: 25%;
   left: 50%;
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
-  z-index: 1;
+  z-index: 0;
   font-size: 12rem;
   color: #fff;
   -webkit-text-stroke-width: 0.2rem;
   -webkit-text-stroke-color: black;
 }
 
-@media screen and (max-width: 1000px) {
+@media screen and (max-width: 1179px) {
   .video-text {
     font-size: 8rem;
+  }
+  .video-and-text {
+    margin-top: 40rem;
+  }
+}
+
+@media screen and (min-width: 1180px) and (max-width: 1300px) {
+  .video-text {
+    top: 35%;
   }
 }
 
