--- a/scss/_culturesec.scss
+++ b/scss/_culturesec.scss
@@ -9,6 +9,8 @@
   border-top: 0.1rem $accent-color-mix solid;
   width: 100%;
   height: auto;
+  padding-bottom: 8rem;
+  padding-top: 12rem;
 }
 
 /* CULTURE LABEL */
