--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,7 +1,7 @@
 @import "_variables";
-@import "_header";
+@import "_navbar";
 @import "_mixins";
-@import "_intro";
+@import "_header";
 @import "_culturesec";
 
 html,
